--- a/index.html
+++ b/index.html
@@ -12,18 +12,14 @@
             <h1>The Underground</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni dolorum deleniti in cumque vero.</p>
             <p>Quis, rem quisquam delectus at eum perferendis beatae praesentium nostrum voluptatum vitae quasi! Reiciendis, molestias voluptatum?</p>
-            <div class="bouton1">
-                <a href="">En savoir +</a>
-            </div>
+            <a class="bouton1" href="">En savoir +</a>
         </div> 
     </header>
     <main>
         <div class="rencontre">
             <h2>Venez nous rencontrer</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat, facere rerum veniam a consectetur voluptas. Facilis, animi! Quo incidunt, quasi ullam fuga vel dolorum aliquid nesciunt praesentium similique, magni commodi.</p>
-            <div class="bouton2">
-                <a href="">En savoir +</a>
-            </div>
+            <a class="bouton2" href="">En savoir +</a>
         </div>
     </main>
     <footer>
